link to season wiki page

--- a/templates/season.html
+++ b/templates/season.html
@@ -9,7 +9,7 @@
 		<header>
 			<h1>Season {{ seasonNumber }}</h1>
 			<div class="hits">
-				{{ hits }} page views on Wikipedia in the past 60 days
+				{{ hits }} page views on <a href="https://en.wikipedia.org/wiki/Friends_(season_{{num}}" target="">Wikipedia</a> in the past 60 days
 			</div>
 		</header>
 		<main>
