--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 <body>
 	<div id="container">
 		<header>
+			<img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Friends_logo.svg" class="logo">
 			<h1>Weird F&bull;r&bull;i&bull;e&bull;n&bull;d&bull;s Thing</h1>
 		</header>
 		<main>
