main sub-heading style and some rephrasing

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,13 @@
 	<div id="container">
 		<header>
 			<img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Friends_logo.svg" class="logo">
-			<h1>Weird F&bull;r&bull;i&bull;e&bull;n&bull;d&bull;s Thing</h1>
+			<h3>A Weird Exercise in Web Scraping and Flask</h3>
 		</header>
 		<main>
 			{% include 'menu.html' %}
 			<h4>What?</h4>
 			<p>
-				Choose a season from the menu above, and you'll find a list of the episodes in that season and
+				For any season of Friends chosen from the menu above, you'll find a list of the episodes in that season and
 				the popularity of the season's Wikipedia page (in terms of the number of hits it has received in the last 60 days).
 			</p>
 			<h4>Why?</h4>
