--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,11 @@ h1 {
 	color: #334;
 	margin-bottom: 0.5em;
 }
+h3 {
+	text-align: center;
+	color: #334;
+	margin-bottom: 0.5em;
+}
 .hits {
 	font-style: italic;
 	text-align: center;
